# darknet

./: CMakeLists.txt
examples/: detector.c
my_tool_scripts/: check_file_absent.py  create_coco_annotations.py  create_label_files.py  evaluate_by_coco_api.py  split_data_to_train_val_set.py
my_tool_scripts/tools_for_yolo/: fix_yolo_coco_result.py  preprocess_for_yolo.py
src/: data.c  utils.c  utils.h  yolo_layer.c
train_val_test_cfg/: train_image_paths_25396_yolo_25302.txt  val_image_paths_2803_yolo_2793.txt  yolov3-45cls-test.cfg  yolov3-45cls-test.data  yolov3-45cls-train-stage2.cfg  yolov3-45cls-train-stage2.data  yolov3-45cls-train.cfg  yolov3-45cls-train.data  yolov3-45cls-validation.data  yolov3_train.sh  yolov3_train_stage2.sh  yolov3_validataion.sh  yolov3_validataion_coco_results_45cls.json  yolov3_validataion_coco_results_45cls_fixed.json
